--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,10 @@
   color: white;
 }
 
-body, h1, h2, ul {
+body, h1, h2 {
   margin: 10;
   padding: 0;
+  color: white;
 }
 
 body {
@@ -26,37 +27,50 @@ body {
   align-items: center;
   text-align: center;
   height: 100vh;
+  background-image: url('/public/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
   font-size: 24px;
-  margin: 30px 0;
+  margin: 50px 0;
 }
 
-ul.menu {
-  list-style: none;
-  display: inline-flex;
-  margin: 20px 0;
-  padding: 0;
+.dropdown {
+  position: fixed;
+  left: 4%;
+  text-align: left;
 }
 
-ul.menu li {
+.menu-icon {
+  font-size: 32px;
   cursor: pointer;
-  background-color: #07407c;
-  border-color: #07407c;
-  color: #fff;
-  border-radius: 0%;
-  padding: 12px 70px;
-  margin-bottom: 20px;
-  transition: background-color 0.3s;
+  font-weight: bold;
 }
 
-ul.menu li:hover {
-  background-color: #5496ddc5;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 5%;
 }
 
-ul.menu li:last-child {
-  margin-right: 0;
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content span {
+  padding: 16px 20px;
+  border-radius: 5%;
+  color: #282c34;
+  display: block;
+}
+
+.dropdown-content span:hover {
+  background-color: #007d999f;
 }
 
 input[type="text"],
@@ -64,6 +78,7 @@ input[type="number"],
 select,
 button {
   width: 60%;
+  font-size: 15px;
   padding: 10px;
   margin: 5px 0;
   border: 1px solid #ccc;
@@ -76,14 +91,26 @@ select {
 }
 
 button {
-  background-color: #007bff;
+  background-color: #007d99;
   color: #fff;
   border: none;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #004757;
+  transition: background-color 0.3s;
+}
+
+.delete-button {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 ul {
@@ -93,7 +120,6 @@ ul {
 
 li {
   font-size: 14px;
-  border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
   margin: 5px 0;
@@ -101,8 +127,10 @@ li {
 
 li.income {
   background-color: #c2f3c2;
+  color: #005700;
 }
 
 li.expense {
   background-color: #ffb6b6;
+  color: #500000;
 }
