--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,13 @@ body {
 
 h1 {
   font-size: 24px;
-  margin: 50px 0;
+  margin: 80px 0;
 }
 
 .dropdown {
   position: fixed;
-  left: 4%;
+  left: 5%;
+  top: 4%;
   text-align: left;
 }
 
@@ -70,7 +71,7 @@ h1 {
 }
 
 .dropdown-content span:hover {
-  background-color: #007d999f;
+  background-color: #00303b62;
 }
 
 a {
