--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,32 @@ form div{
 form label {
   left: 0%;
 }
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.profile-image img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-right: 20px;
+}
+
+.profile-info {
+  text-align: left;
+}
+
+.profile-info h1 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.profile-info p {
+  margin: 7px 0;
+}
