--- a/src/App.css
+++ b/src/App.css
@@ -116,10 +116,17 @@ button:hover {
   color: #fff;
   border: none;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   font-size: 14px;
   cursor: pointer;
+}
+
+.history-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 15px 50px;
 }
 
 ul {
@@ -130,8 +137,8 @@ ul {
 li {
   font-size: 14px;
   border-radius: 4px;
-  padding: 10px;
-  margin: 5px 0;
+  padding: 15px;
+  margin: 5px 20px;
 }
 
 li.income {
